fix heading spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: black;
 }
 .App-header-div {
   align-items: center;
   width: 60%;
+  padding-top: 20px;
 }
 
 .App-title {
